[package]
name = "metacall_ssr_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1" }
axum = "0.7.4"
http-body-util = "0.1.1"
metacall = "0.4.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
warp = "0.3.6"

[[bin]]
name = "actix"
path = "src/actix.rs"

[[bin]]
name = "axum"
path = "src/axum.rs"

[[bin]]
name = "warp"
path = "src/warp.rs"
