[package]
name = "metacall_ssr_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3.7", default-features = false }
metacall = { version = "0.4.0", default-features = false }
http-body-util = { version = "0.1.1", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
actix-web = { version = "4.5.1", default-features = false, features = [
    "macros",
] }
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "tokio",
] }
tokio = { version = "1.37.0", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }

[[bin]]
name = "actix"
path = "src/actix.rs"

[[bin]]
name = "axum"
path = "src/axum.rs"

[[bin]]
name = "warp"
path = "src/warp.rs"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
